@@ -542,7 +542,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © Michal Josef Špaček 2021-2023
+    © Michal Josef Špaček 2021-2024
 
     BSD 2-Clause License
 
